[package]
name = "hard2"
version = "0.1.0"
authors = ["Ambrose Chua <ambrose@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.8.1"
pollster = "0.2.4"
bytemuck = "1.5.1"
env_logger = "0.8.3"
log = { version = "0.4.14", features = ["release_max_level_off"] }
